# crystal_vst

./: .gitignore  CMakeLists.txt  CrystalVST_Architecture_and_Flow.md  README.md
Releases/CrystalVST.app/Contents/: Info.plist
Releases/CrystalVST.component/Contents/: Info.plist
Releases/CrystalVST.vst3/Contents/: Info.plist
Releases/CrystalVST.vst3/Contents/Resources/: moduleinfo.json
Releases/CrystalVST.vst3/Contents/_CodeSignature/: CodeResources
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
